--- a/windows/ccubed/ccubed.vcxproj
+++ b/windows/ccubed/ccubed.vcxproj
@@ -121,6 +121,12 @@
     <Image Include="ccubed.ico" />
     <Image Include="small.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\tests\test.cs" />
+    <Text Include="..\..\tests\test.js">
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</DeploymentContent>
+    </Text>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
